# rsomics-kinship

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: fileset.rs  format.rs  gfmt.rs  king.rs  lib.rs  main.rs  simd.rs
tests/: compat.rs
tests/golden/: gold.bed  gold.bim  gold.fam  gold_king.kin0
